2018-01-13  Bruno Haible  <bruno@clisp.org>

	Improve the quality of SXHASH on instances of STANDARD-STABLEHASH and
	STRUCTURE-STABLEHASH.
	Suggested by Sam Steingold.
	* hashtabl.d (sxhash_clause2): Renamed from sxhash.
	(sxhash): New function.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on GNU/kFreeBSD/x86_64.
	* Makefile.devel (multibuild-freebsd-gnu-x86_64): Enable all build
	variants.
	* makemake.in (XCFLAGS): For GNU/kFreeBSD/x86_64, enable all
	optimizations except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/sparc64.
	* Makefile.devel (multibuild-linux-sparc64): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/sparc64, enable all optimizations
	except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/sparc.
	* Makefile.devel (multibuild-linux-sparc): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/sparc, enable all optimizations
	except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/powerpc64le.
	* Makefile.devel (multibuild-linux-powerpc64le): Enable all build
	variants.
	* makemake.in (XCFLAGS): For Linux/powerpc64le, enable all optimizations
	except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/powerpc64.
	* Makefile.devel (multibuild-linux-powerpc64): Enable all build
	variants.
	* makemake.in (XCFLAGS): For Linux/powerpc64, enable all optimizations
	except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/powerpc.
	* Makefile.devel (multibuild-linux-powerpc): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/powerpc, enable all optimizations
	except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/arm64.
	* Makefile.devel (multibuild-linux-arm64): Enable all build variants.